--- a/config.json
+++ b/config.json
@@ -185,6 +185,8 @@
 		"dns_lookup_interval" 	: "200ms"
 	},
 	"test" : {
+		"refresh_interval" : "30m",
+
 		"threatcrowd_expire" : "8760h",
 
 		"geoip2_path" : "./GeoLite2-City.mmdb",
@@ -195,6 +197,9 @@
 		"http_count"		: 2,
 		"http_timeout"		: "30s",
 		"http_buffersize"	: 32768
-		
+	},
+	"rpc" : {
+		"network" : "tcp",
+		"address" : "127.0.0.1:55430"
 	}
 }
