--- a/config.json
+++ b/config.json
@@ -182,7 +182,7 @@
 		],
 		"server_cache_expire"		: "30m",
 		"server_cache_max_count"	: 100000,
-		
+
 		"dns_lookup_timeout" 	: "5s",
 		"dns_lookup_interval" 	: "200ms"
 	},
@@ -198,7 +198,14 @@
 
 		"http_count"		: 2,
 		"http_timeout"		: "30s",
-		"http_buffersize"	: 32768
+		"http_buffersize"	: 32768,
+
+		"twitter-status-template"	: "template/tweet-status.txt",
+		"twitter-app-key"			: "",
+		"twitter-app-secret"		: "",
+		"twitter-user-key"			: "",
+		"twitter-user-secret"		: ""
+
 	},
 	"rpc" : {
 		"network" : "tcp",
