Administered by RIPE NCC

--- a/config.json
+++ b/config.json
@@ -202,6 +202,7 @@
 		"organization-ignore" : [
 			"ARIN",
 			"Administered by ARIN",
+			"Administered by RIPE NCC",
 			"IPv4 address block not managed by the RIPE NCC"
 		]
 	},
