--- a/.editorconfig
+++ b/.editorconfig
@@ -9,8 +9,14 @@ indent_size = 4
 insert_final_newline = true
 
 [*.go]
-end_of_line = lf
-charset = utf-8
 indent_style = tab
 indent_size = 4
-insert_final_newline = true
+
+[*.json]
+indent_style = space
+indent_size = 2
+
+
+[*.md]
+indent_style = space
+indent_size = 4
