--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,16 @@
 			"mode": "auto",
 			"program": "${workspaceFolder}",
 			"env": {},
+			"args": [ "--verbose" ],
+        },
+        {
+			"name": "hash",
+			"type": "go",
+			"request": "launch",
+			"mode": "auto",
+			"program": "${workspaceFolder}/config-hash/",
+			"env": {},
 			"args": [],
-			
         }
     ]
 }
