--- a/.editorconfig
+++ b/.editorconfig
@@ -16,7 +16,10 @@ indent_size = 4
 indent_style = space
 indent_size = 2
 
-
 [*.md]
 indent_style = space
 indent_size = 4
+
+[*.js.tmpl]
+indent_style = space
+indent_size = 2
