--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
 			"mode": "auto",
 			"program": "${workspaceFolder}",
 			"env": {},
-			"args": [ "--verbose" ],
+			"args": [ "--server", "--verbose" ],
         },
         {
 			"name": "hash",
